Add new train test splitting methods, add sequential recommender

--- a/notebooks/Train-Test Split.ipynb
+++ b/notebooks/Train-Test Split.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0de92f75-c831-42a6-9b0f-b1c5d00101a6",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6a4d4071-2572-4034-8fe6-2e5d208cba98",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0bf5ba36-182f-4c4a-a5b4-f6e45a5858a4",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "87d13ffd-6e76-495c-ba57-436f334c0c5b",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "f49334e0-8e80-4c30-ac71-af1a11e9e3f2",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "174219it [00:08, 21238.44it/s]\n"
+      "174219it [00:07, 22019.09it/s]\n"
      ]
     },
     {
@@ -130,8 +130,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "128771it [00:06, 19415.51it/s]\n",
-      "45448it [00:02, 19032.75it/s]\n"
+      "128771it [00:06, 18610.21it/s]\n",
+      "45448it [00:02, 19168.05it/s]\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "fb02c2da-6ab3-4583-acef-cc477a3f35a5",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int8)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "fbf71070-34d3-4ff2-8ff6-4474189a0e68",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int8)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "cae5bfb6-ae0f-4597-8558-5a7c88c33209",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "123859"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "7c52213a-843d-4b80-b771-cc79f80d2031",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "166310"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "f250ac20-64d3-41e3-b801-ec9b822d203c",
    "metadata": {},
    "outputs": [
@@ -262,8 +262,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "131100it [00:07, 18564.81it/s]\n",
-      "43119it [00:02, 17723.09it/s]\n"
+      "131100it [00:06, 20041.78it/s]\n",
+      "43119it [00:02, 19685.53it/s]\n"
      ]
     }
    ],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "id": "dfdef7b8-4a49-4650-af8a-c818632a05a8",
    "metadata": {},
    "outputs": [
@@ -282,16 +282,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "By  B R s  : {'information-security-data'} => aws-fundamentals-going-cloud-native\n",
-      "By  B R s  : {'information-security-data', 'aws-fundamentals-going-cloud-native'} => python-basics\n",
-      "By  B R s  : {'python-basics', 'information-security-data', 'aws-fundamentals-going-cloud-native'} => introduction-cybersecurity-cyber-attacks\n",
-      "By  B S K : {'python-data'} => neural-networks-deep-learning\n",
-      "By  B S K : {'python-data', 'neural-networks-deep-learning'} => deep-neural-network\n",
-      "By  B S K : {'python-data', 'neural-networks-deep-learning', 'deep-neural-network'} => machine-learning-projects\n",
-      "By  B S K : {'python-data', 'machine-learning-projects', 'neural-networks-deep-learning', 'deep-neural-network'} => introduction-tensorflow\n",
-      "By  B S K : {'python-data', 'machine-learning-projects', 'neural-networks-deep-learning', 'deep-neural-network', 'introduction-tensorflow'} => convolutional-neural-networks-tensorflow\n",
-      "By  B S K : {'python-data', 'machine-learning-projects', 'neural-networks-deep-learning', 'deep-neural-network', 'convolutional-neural-networks-tensorflow', 'introduction-tensorflow'} => tensorflow-sequences-time-series-and-prediction\n",
-      "By  C S V  : {'neural-networks-deep-learning'} => machine-learning-projects\n"
+      "By  B R s  : ('information-security-data',) => aws-fundamentals-going-cloud-native\n",
+      "By  B R s  : ('information-security-data', 'aws-fundamentals-going-cloud-native') => python-basics\n",
+      "By  B R s  : ('information-security-data', 'aws-fundamentals-going-cloud-native', 'python-basics') => introduction-cybersecurity-cyber-attacks\n",
+      "By  B S K : ('python-data',) => neural-networks-deep-learning\n",
+      "By  B S K : ('python-data', 'neural-networks-deep-learning') => deep-neural-network\n",
+      "By  B S K : ('python-data', 'neural-networks-deep-learning', 'deep-neural-network') => machine-learning-projects\n",
+      "By  B S K : ('python-data', 'neural-networks-deep-learning', 'deep-neural-network', 'machine-learning-projects') => introduction-tensorflow\n",
+      "By  B S K : ('python-data', 'neural-networks-deep-learning', 'deep-neural-network', 'machine-learning-projects', 'introduction-tensorflow') => convolutional-neural-networks-tensorflow\n",
+      "By  B S K : ('python-data', 'neural-networks-deep-learning', 'deep-neural-network', 'machine-learning-projects', 'introduction-tensorflow', 'convolutional-neural-networks-tensorflow') => tensorflow-sequences-time-series-and-prediction\n",
+      "By  C S V  : ('neural-networks-deep-learning',) => machine-learning-projects\n"
      ]
     }
    ],
@@ -299,6 +299,310 @@
     "for x, y in zip(train_X[:10], train_y[:10]):\n",
     "    print(f\"{x[0]} : {x[1]} => {y}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31b1a81a-dea0-41a8-9457-e926bc62717c",
+   "metadata": {},
+   "source": [
+    "## Getting the training matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "61190be9-015c-47b4-87be-d92f27c7b238",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the training and test rating matrix...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "131100it [00:06, 18928.07it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_features, train_groundtruth = dataset.get_train_matrix_split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "745131bd-5951-4fce-a074-6eb3764b80ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 0, 0, ..., 0, 0, 0],\n",
+       "       [5, 5, 0, ..., 0, 0, 0],\n",
+       "       [4, 5, 5, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int8)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cafee244-9689-4856-851b-d3d85844f3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 0, 5, ..., 0, 0, 0],\n",
+       "       [5, 5, 0, ..., 0, 0, 0],\n",
+       "       [4, 4, 5, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int8)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_groundtruth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a7d0e2d6-28d7-4bd9-b89c-605b6256de1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100944"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(train_features != 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dee95fc0-5a40-4136-869d-15dc1c2953dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125059"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(train_groundtruth != 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "40475cce-71ca-4df1-b466-9b8b131cb863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the test rating matrix split...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "43119it [00:02, 16653.57it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_features, test_groundtruth = dataset.get_test_matrix_split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "70579523-52e1-4d18-8e42-113c024dd1cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [5, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int8)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bcf9fb1d-7897-4dbd-8db8-6c38c33fcc09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [5, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int8)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_groundtruth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ac1ce8d3-ee1c-4a8b-8947-ec6aff741832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26169"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(test_features != 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "370ec428-3f6b-4e3b-ae04-6f206a3365c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41251"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(test_groundtruth != 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8b6fa7a6-4cb4-43ec-9b60-b6109d81c098",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "151228"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_test_features = (train_groundtruth + test_features)\n",
+    "\n",
+    "(full_test_features != 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "48a2b0e4-0d33-4a07-8d6f-e03a863965b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166310"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_ground_truth = (train_groundtruth + test_groundtruth)\n",
+    "\n",
+    "(full_ground_truth != 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6895c9fe-04b7-4019-b4aa-868ff56ab114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
