--- a/notebooks/BasicEDA.ipynb
+++ b/notebooks/BasicEDA.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic EDA\n",
+    "This notebook is where I look at some of the data to see how users rate courses and which courses are popular etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
