--- a/notebooks/Item Based Collaborative Filtering.ipynb
+++ b/notebooks/Item Based Collaborative Filtering.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Item Based Collaborative Filtering\n",
-    "\n"
+    "\n",
+    "Suggests items by identifying relationships between different items based on user ratings.\n",
+    "\n",
+    "This approach calculates the similarity between items using user ratings. Here, we assume that if users liked a particular item, they are more likely to enjoy items that are similar to it."
    ]
   },
   {
