--- a/notebooks/User Based Collaborative Filtering.ipynb
+++ b/notebooks/User Based Collaborative Filtering.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# User Based Collaborative Filtering\n",
+    "\n",
+    "The User-Based Collaborative Filtering Recommender is a system that suggests items based on the preferences of similar users to the target.\n",
+    "\n",
+    "i.e. users who agreed in the past tend to agree again in the future.\n",
+    "\n",
+    "We analyse user ratings of courses to identify users with similar 'tastes' and leverage their past opinions to predict what the current user might like."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
