--- a/notebooks/Item Based Collaborative Filtering.ipynb
+++ b/notebooks/Item Based Collaborative Filtering.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,27 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['learning-how-to-learn',\n",
+       "['cybersecurity-roles-processes-operating-system-security',\n",
        " 'python',\n",
-       " 'neural-networks-deep-learning',\n",
-       " 'technical-support-fundamentals',\n",
-       " 'python-data']"
+       " 'python-functions-files-dictionaries',\n",
+       " 'python-data',\n",
+       " 'technical-support-fundamentals']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use the model to get recommendations for a given user\n",
-    "user_previous_courses = tuple(dataset.train_ratings[dataset.train_ratings['reviewers'] == 'By Robert S']['course_id'])\n",
+    "user_previous_courses = tuple(dataset.train_ratings[dataset.train_ratings['reviewers'] == 'By Kelvin k']['course_id'])\n",
     "recommendations = item_cf_model.recommend(user_previous_courses, k=5)\n",
     "\n",
     "recommendations"
@@ -120,41 +120,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def hit_rate(model, test_set, k=5):\n",
     "    hits = 0\n",
     "    total = 0\n",
     "\n",
     "    for user_id in test_set['reviewers'].unique():\n",
-    "        prev_courses = set(test_set[test_set['reviewers'] == user_id]['course_id'])\n",
+    "        # Get previously rated courses for the user in training data\n",
+    "        prev_courses = tuple(dataset.train_ratings[dataset.train_ratings['reviewers'] == user_id]['course_id'])\n",
     "\n",
-    "        if not prev_courses:\n",
-    "            continue\n",
-    "        \n",
-    "        user_predicted_top_k = set(model.recommend(list(prev_courses), k))\n",
-    "        user_actual_top_k = set(test_set[test_set['reviewers'] == user_id].nlargest(k, 'rating')['course_id'])\n",
+    "        # get the top-k recommended courses from the model\n",
+    "        recommended_courses = model.recommend(prev_courses, k)\n",
     "\n",
-    "        hits += 1 if len(user_predicted_top_k & user_actual_top_k) > 0 else 0\n",
+    "        # Get the actual top-k rated courses for the user in the test data\n",
+    "        actual_top_k = test_set[test_set['reviewers'] == user_id].nlargest(k, 'rating')['course_id']\n",
+    "\n",
+    "        # Calculate hits\n",
+    "        if any(course in recommended_courses for course in actual_top_k):\n",
+    "            hits += 1\n",
     "        total += 1\n",
     "        \n",
-    "        # print(user_predicted_top_k)\n",
-    "        # print(user_actual_top_k)\n",
-    "        \n",
-    "        print(f\"Hits: {hits}\")\n",
+    "        # print(f\"Hit Rate: {hits / total if total > 0 else 0}\")\n",
+    "        if total == 500: # Stop after 500 users\n",
+    "            break\n",
     "\n",
-    "    hit_rate = hits / total if total > 0 else 0\n",
-    "    print(f\"Final Hit Rate: {hit_rate}\")\n",
-    "    return hit_rate"
+    "    return hits / total if total > 0 else 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting the train-test split randomly...\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.set_train_test_split_random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.52"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cf_model = ItemBasedCF(dataset.course_set)\n",
     "\n",
