--- a/notebooks/User Based Collaborative Filtering.ipynb
+++ b/notebooks/User Based Collaborative Filtering.ipynb
@@ -172,9 +172,9 @@
     "        hits += 1 if len(set(user_predicted_top_k) & set(user_actual_top_k)) > 0 else 0\n",
     "        total += 1\n",
     "        \n",
-    "        print(f\"Hit Rate: {hits / total if total > 0 else 0}\")\n",
+    "        # print(f\"Hit Rate: {hits / total if total > 0 else 0}\")\n",
     "        \n",
-    "        if total == 200: # Stop after 200 users\n",
+    "        if total == 500: # Stop after 500 users\n",
     "            break\n",
     "\n",
     "    return hits / total if total > 0 else 0"
