--- a/notebooks/Item Based Collaborative Filtering.ipynb
+++ b/notebooks/Item Based Collaborative Filtering.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        " 'technical-support-fundamentals']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +129,8 @@
     "def hit_rate(model, test_set, k=5):\n",
     "    hits = 0\n",
     "    total = 0\n",
-    "\n",
-    "    for user_id in test_set['reviewers'].unique():\n",
+    "    #test_set['reviewers'].unique():\n",
+    "    for user_id in tqdm(test_set['reviewers'].unique()):\n",
     "        # Get previously rated courses for the user in training data\n",
     "        prev_courses = tuple(dataset.train_ratings[dataset.train_ratings['reviewers'] == user_id]['course_id'])\n",
     "\n",
@@ -146,15 +146,15 @@
     "        total += 1\n",
     "        \n",
     "        # print(f\"Hit Rate: {hits / total if total > 0 else 0}\")\n",
-    "        if total == 500: # Stop after 500 users\n",
-    "            break\n",
+    "        # if total == 500: # Stop after 500 users\n",
+    "        #     break\n",
     "\n",
     "    return hits / total if total > 0 else 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -166,31 +166,44 @@
     }
    ],
    "source": [
-    "dataset.set_train_test_split_random()"
+    "dataset.set_train_test_split_random(0.999)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf_model = ItemBasedCF(dataset.course_set)\n",
+    "\n",
+    "cf_model.fit(dataset.train_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 174/174 [00:06<00:00, 28.34it/s]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.52"
+       "0.3390804597701149"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cf_model = ItemBasedCF(dataset.course_set)\n",
-    "\n",
-    "cf_model.fit(dataset.train_ratings)\n",
-    "\n",
-    "\n",
     "hit_rate(cf_model, dataset.test_ratings, k=10)"
    ]
   }
