--- a/notebooks/User Based Collaborative Filtering.ipynb
+++ b/notebooks/User Based Collaborative Filtering.ipynb
@@ -40,13 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Coursera courses...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading Coursera courses...\n",
       "Loading Coursera reviews...\n",
       "Segmenting out students with less than 3 or more than 50 reviews...\n",
       "30719 students, 468 courses, 174219 reviews\n",
@@ -134,10 +128,17 @@
     }
    ],
    "source": [
-    "dataset.set_train_test_split_random()\n",
+    "dataset.set_train_test_split_random(0.999)\n",
     "# Instantiate the UserBasedCF model\n",
-    "user_cf_model = UserBasedCF()\n",
-    "\n",
+    "user_cf_model = UserBasedCF()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Fit the model with the training data\n",
     "# Ensure that dataset.train_ratings is available and properly set up before this step\n",
     "user_cf_model.fit(dataset.train_ratings)"
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
     "    hits = 0\n",
     "    total = 0\n",
     "\n",
-    "    for user_id in test_set['reviewers'].unique():\n",
+    "    for user_id in tqdm(test_set['reviewers'].unique()):\n",
     "        # Check if the user_id exists in the user similarity matrix\n",
     "        if user_id not in model.user_similarity_matrix.index:\n",
     "            continue  # Skip this user if not in the training set\n",
@@ -174,244 +175,42 @@
     "        \n",
     "        # print(f\"Hit Rate: {hits / total if total > 0 else 0}\")\n",
     "        \n",
-    "        if total == 500: # Stop after 500 users\n",
-    "            break\n",
+    "        # if total == 500: # Stop after 500 users\n",
+    "        #     break\n",
     "\n",
     "    return hits / total if total > 0 else 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Hit Rate: 0.0\n",
-      "Hit Rate: 0.0\n",
-      "Hit Rate: 0.0\n",
-      "Hit Rate: 0.25\n",
-      "Hit Rate: 0.4\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.2857142857142857\n",
-      "Hit Rate: 0.25\n",
-      "Hit Rate: 0.2222222222222222\n",
-      "Hit Rate: 0.3\n",
-      "Hit Rate: 0.36363636363636365\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.3076923076923077\n",
-      "Hit Rate: 0.35714285714285715\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.375\n",
-      "Hit Rate: 0.35294117647058826\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.3684210526315789\n",
-      "Hit Rate: 0.35\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.36363636363636365\n",
-      "Hit Rate: 0.34782608695652173\n",
-      "Hit Rate: 0.375\n",
-      "Hit Rate: 0.4\n",
-      "Hit Rate: 0.38461538461538464\n",
-      "Hit Rate: 0.37037037037037035\n",
-      "Hit Rate: 0.35714285714285715\n",
-      "Hit Rate: 0.3448275862068966\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.3225806451612903\n",
-      "Hit Rate: 0.3125\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.3235294117647059\n",
-      "Hit Rate: 0.3142857142857143\n",
-      "Hit Rate: 0.3055555555555556\n",
-      "Hit Rate: 0.32432432432432434\n",
-      "Hit Rate: 0.3157894736842105\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.35\n",
-      "Hit Rate: 0.34146341463414637\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.32558139534883723\n",
-      "Hit Rate: 0.3409090909090909\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.32608695652173914\n",
-      "Hit Rate: 0.3191489361702128\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.3469387755102041\n",
-      "Hit Rate: 0.34\n",
-      "Hit Rate: 0.3333333333333333\n",
-      "Hit Rate: 0.3269230769230769\n",
-      "Hit Rate: 0.32075471698113206\n",
-      "Hit Rate: 0.3148148148148148\n",
-      "Hit Rate: 0.32727272727272727\n",
-      "Hit Rate: 0.32142857142857145\n",
-      "Hit Rate: 0.3157894736842105\n",
-      "Hit Rate: 0.3103448275862069\n",
-      "Hit Rate: 0.3050847457627119\n",
-      "Hit Rate: 0.3\n",
-      "Hit Rate: 0.29508196721311475\n",
-      "Hit Rate: 0.2903225806451613\n",
-      "Hit Rate: 0.2857142857142857\n",
-      "Hit Rate: 0.296875\n",
-      "Hit Rate: 0.3076923076923077\n",
-      "Hit Rate: 0.30303030303030304\n",
-      "Hit Rate: 0.31343283582089554\n",
-      "Hit Rate: 0.3235294117647059\n",
-      "Hit Rate: 0.3188405797101449\n",
-      "Hit Rate: 0.3142857142857143\n",
-      "Hit Rate: 0.30985915492957744\n",
-      "Hit Rate: 0.3055555555555556\n",
-      "Hit Rate: 0.3013698630136986\n",
-      "Hit Rate: 0.2972972972972973\n",
-      "Hit Rate: 0.30666666666666664\n",
-      "Hit Rate: 0.3026315789473684\n",
-      "Hit Rate: 0.2987012987012987\n",
-      "Hit Rate: 0.3076923076923077\n",
-      "Hit Rate: 0.31645569620253167\n",
-      "Hit Rate: 0.3125\n",
-      "Hit Rate: 0.30864197530864196\n",
-      "Hit Rate: 0.3048780487804878\n",
-      "Hit Rate: 0.30120481927710846\n",
-      "Hit Rate: 0.30952380952380953\n",
-      "Hit Rate: 0.3176470588235294\n",
-      "Hit Rate: 0.313953488372093\n",
-      "Hit Rate: 0.3218390804597701\n",
-      "Hit Rate: 0.32954545454545453\n",
-      "Hit Rate: 0.3258426966292135\n",
-      "Hit Rate: 0.32222222222222224\n",
-      "Hit Rate: 0.32967032967032966\n",
-      "Hit Rate: 0.32608695652173914\n",
-      "Hit Rate: 0.3225806451612903\n",
-      "Hit Rate: 0.3191489361702128\n",
-      "Hit Rate: 0.3157894736842105\n",
-      "Hit Rate: 0.3125\n",
-      "Hit Rate: 0.30927835051546393\n",
-      "Hit Rate: 0.30612244897959184\n",
-      "Hit Rate: 0.30303030303030304\n",
-      "Hit Rate: 0.31\n",
-      "Hit Rate: 0.31683168316831684\n",
-      "Hit Rate: 0.3137254901960784\n",
-      "Hit Rate: 0.3106796116504854\n",
-      "Hit Rate: 0.3076923076923077\n",
-      "Hit Rate: 0.3047619047619048\n",
-      "Hit Rate: 0.3018867924528302\n",
-      "Hit Rate: 0.29906542056074764\n",
-      "Hit Rate: 0.2962962962962963\n",
-      "Hit Rate: 0.30275229357798167\n",
-      "Hit Rate: 0.3\n",
-      "Hit Rate: 0.2972972972972973\n",
-      "Hit Rate: 0.29464285714285715\n",
-      "Hit Rate: 0.3008849557522124\n",
-      "Hit Rate: 0.2982456140350877\n",
-      "Hit Rate: 0.2956521739130435\n",
-      "Hit Rate: 0.29310344827586204\n",
-      "Hit Rate: 0.2905982905982906\n",
-      "Hit Rate: 0.288135593220339\n",
-      "Hit Rate: 0.29411764705882354\n",
-      "Hit Rate: 0.2916666666666667\n",
-      "Hit Rate: 0.2975206611570248\n",
-      "Hit Rate: 0.29508196721311475\n",
-      "Hit Rate: 0.2926829268292683\n",
-      "Hit Rate: 0.29838709677419356\n",
-      "Hit Rate: 0.296\n",
-      "Hit Rate: 0.29365079365079366\n",
-      "Hit Rate: 0.2992125984251969\n",
-      "Hit Rate: 0.296875\n",
-      "Hit Rate: 0.29457364341085274\n",
-      "Hit Rate: 0.2923076923076923\n",
-      "Hit Rate: 0.2900763358778626\n",
-      "Hit Rate: 0.29545454545454547\n",
-      "Hit Rate: 0.2932330827067669\n",
-      "Hit Rate: 0.29850746268656714\n",
-      "Hit Rate: 0.2962962962962963\n",
-      "Hit Rate: 0.29411764705882354\n",
-      "Hit Rate: 0.29927007299270075\n",
-      "Hit Rate: 0.2971014492753623\n",
-      "Hit Rate: 0.2949640287769784\n",
-      "Hit Rate: 0.29285714285714287\n",
-      "Hit Rate: 0.2907801418439716\n",
-      "Hit Rate: 0.2887323943661972\n",
-      "Hit Rate: 0.2867132867132867\n",
-      "Hit Rate: 0.2916666666666667\n",
-      "Hit Rate: 0.2896551724137931\n",
-      "Hit Rate: 0.2876712328767123\n",
-      "Hit Rate: 0.2857142857142857\n",
-      "Hit Rate: 0.28378378378378377\n",
-      "Hit Rate: 0.28187919463087246\n",
-      "Hit Rate: 0.28\n",
-      "Hit Rate: 0.2781456953642384\n",
-      "Hit Rate: 0.27631578947368424\n",
-      "Hit Rate: 0.27450980392156865\n",
-      "Hit Rate: 0.2727272727272727\n",
-      "Hit Rate: 0.27741935483870966\n",
-      "Hit Rate: 0.28205128205128205\n",
-      "Hit Rate: 0.2802547770700637\n",
-      "Hit Rate: 0.27848101265822783\n",
-      "Hit Rate: 0.27672955974842767\n",
-      "Hit Rate: 0.28125\n",
-      "Hit Rate: 0.2795031055900621\n",
-      "Hit Rate: 0.2839506172839506\n",
-      "Hit Rate: 0.2822085889570552\n",
-      "Hit Rate: 0.2804878048780488\n",
-      "Hit Rate: 0.2787878787878788\n",
-      "Hit Rate: 0.27710843373493976\n",
-      "Hit Rate: 0.281437125748503\n",
-      "Hit Rate: 0.27976190476190477\n",
-      "Hit Rate: 0.2781065088757396\n",
-      "Hit Rate: 0.2823529411764706\n",
-      "Hit Rate: 0.2807017543859649\n",
-      "Hit Rate: 0.27906976744186046\n",
-      "Hit Rate: 0.2774566473988439\n",
-      "Hit Rate: 0.27586206896551724\n",
-      "Hit Rate: 0.2742857142857143\n",
-      "Hit Rate: 0.2784090909090909\n",
-      "Hit Rate: 0.2824858757062147\n",
-      "Hit Rate: 0.2808988764044944\n",
-      "Hit Rate: 0.2849162011173184\n",
-      "Hit Rate: 0.2833333333333333\n",
-      "Hit Rate: 0.281767955801105\n",
-      "Hit Rate: 0.2802197802197802\n",
-      "Hit Rate: 0.28415300546448086\n",
-      "Hit Rate: 0.2826086956521739\n",
-      "Hit Rate: 0.2864864864864865\n",
-      "Hit Rate: 0.2849462365591398\n",
-      "Hit Rate: 0.28342245989304815\n",
-      "Hit Rate: 0.2872340425531915\n",
-      "Hit Rate: 0.291005291005291\n",
-      "Hit Rate: 0.2894736842105263\n",
-      "Hit Rate: 0.2879581151832461\n",
-      "Hit Rate: 0.2916666666666667\n",
-      "Hit Rate: 0.29015544041450775\n",
-      "Hit Rate: 0.28865979381443296\n",
-      "Hit Rate: 0.28717948717948716\n",
-      "Hit Rate: 0.2857142857142857\n",
-      "Hit Rate: 0.28426395939086296\n",
-      "Hit Rate: 0.2828282828282828\n",
-      "Hit Rate: 0.2814070351758794\n",
-      "Hit Rate: 0.28\n"
+      "100%|██████████| 175/175 [00:06<00:00, 25.26it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.28"
+       "0.22857142857142856"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cf_model = UserBasedCF()\n",
-    "cf_model.fit(dataset.train_ratings)\n",
-    "\n",
-    "hit_rate(cf_model, dataset.test_ratings, k=10)"
+    "hit_rate(user_cf_model, dataset.test_ratings, k=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,8 +265,8 @@
     "    return hits / total if total > 0 else 0\n",
     "\n",
     "# Test the model\n",
-    "precision = precision_at_k(user_cf_model, dataset.test_ratings, k=5)\n",
-    "print(f\"Precision@5: {precision}\")\n"
+    "# precision = precision_at_k(user_cf_model, dataset.test_ratings, k=5)\n",
+    "# print(f\"Precision@5: {precision}\")\n"
    ]
   },
   {
