Add notebooks used for sequential recommendation

--- a/notebooks/Sequential Recommendation - Baseline.ipynb
+++ b/notebooks/Sequential Recommendation - Baseline.ipynb
@@ -5,7 +5,7 @@
    "id": "55f1742a-421c-4f90-aa5a-dd8324fc29c7",
    "metadata": {},
    "source": [
-    "# Training Set Markov Chain\n",
+    "# Sequential Recommendation - Baseline (Markov Chain)\n",
     "\n",
     "* [Course Reviews on Coursera](https://www.kaggle.com/datasets/imuhammad/course-reviews-on-coursera)\n",
     "* [Coursera Courses 2021](https://www.kaggle.com/datasets/khusheekapoor/coursera-courses-dataset-2021)"
