--- a/notebooks/Item Based Collaborative Filtering.ipynb
+++ b/notebooks/Item Based Collaborative Filtering.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,23 @@
     }
    ],
    "source": [
-    "dataset.set_train_test_split_by_user()\n",
+    "dataset.set_train_test_split_by_user()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting the train-test split by user...\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# Instantiate the ItemBasedCF model\n",
     "item_cf_model = ItemBasedCF(dataset.course_set)\n",
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +107,7 @@
        " 'technical-support-fundamentals']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,10 +122,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the training and test rating matrix...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "131100it [00:07, 16610.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the test rating matrix split...\n",
+      "Computing the training and test rating matrix...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "131100it [00:07, 16852.73it/s]\n",
+      "43119it [00:02, 17502.71it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_Xmatrix, train_ymatrix, df_train_X, df_train_y = dataset.get_train_matrix_split(ratio=0.8)\n",
+    "test_Xmatrix, test_ymatrix, df_test_X, df_test_y = dataset.get_test_matrix_split(ratio=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_hit_rate(model, test_X, test_y, k=5):\n",
+    "    hit_count = 0\n",
+    "    total = 0\n",
+    "\n",
+    "    for user_id in tqdm(dataset.test_students):\n",
+    "        user_history = test_X[test_X['reviewers'] == user_id]['course_id'].values\n",
+    "        actual_next_courses = test_y[test_y['reviewers'] == user_id]['course_id'].values\n",
+    "        \n",
+    "        if len(actual_next_courses) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        recommended_courses = model.recommend(user_history, k=k)\n",
+    "\n",
+    "        hits = any(course in recommended_courses for course in actual_next_courses)\n",
+    "        hit_count += 1 if hits else 0\n",
+    "        total += 1\n",
+    "\n",
+    "    # Calculate overall hit rate\n",
+    "    return hit_count / total\n",
+    "\n",
+    "\n",
+    "item_based_cf_model = ItemBasedCF(dataset.course_set)\n",
+    "\n",
+    "all_train = pd.concat([df_train_X, df_train_y])\n",
+    "\n",
+    "# fit with both training X and training y\n",
+    "item_based_cf_model.fit(all_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [04:18<00:00, 29.72it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6087239583333334"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_hit_rate(item_based_cf_model, df_test_X, df_test_y, k=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [04:02<00:00, 31.72it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.378515625"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_hit_rate(item_based_cf_model, df_test_X, df_test_y, k=5)"
+   ]
   },
   {
    "cell_type": "markdown",
