--- a/notebooks/Item Based Collaborative Filtering.ipynb
+++ b/notebooks/Item Based Collaborative Filtering.ipynb
@@ -72,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting the train-test split by user...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Instantiate the ItemBasedCF model\n",
@@ -118,6 +110,161 @@
     "recommendations = item_cf_model.recommend(user_previous_courses, k=5)\n",
     "\n",
     "recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [06:42<00:00, 19.09it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = item_cf_model.predict_all_ratings(dataset.test_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('item_based_collab_results', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>course_id</th>\n",
+       "      <th>predicted_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>By  A O</td>\n",
+       "      <td>python-data</td>\n",
+       "      <td>0.323222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>By  A O</td>\n",
+       "      <td>python-data-visualization</td>\n",
+       "      <td>0.249256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>By  A O</td>\n",
+       "      <td>python</td>\n",
+       "      <td>0.227561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>By  A O</td>\n",
+       "      <td>neural-networks-deep-learning</td>\n",
+       "      <td>0.137716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>By  A O</td>\n",
+       "      <td>python-data-analysis</td>\n",
+       "      <td>0.117494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3552984</th>\n",
+       "      <td>By 배병선</td>\n",
+       "      <td>child-development</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3552985</th>\n",
+       "      <td>By 배병선</td>\n",
+       "      <td>remote-team-management</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3552986</th>\n",
+       "      <td>By 배병선</td>\n",
+       "      <td>write-a-feature-length-screenplay-for-film-or-television</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3552987</th>\n",
+       "      <td>By 배병선</td>\n",
+       "      <td>covid-19-contact-tracing-for-nursing-professionals</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3552988</th>\n",
+       "      <td>By 배병선</td>\n",
+       "      <td>introduction-to-data-analytics</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3552989 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         user_id                                                 course_id  predicted_rating\n",
+       "0        By  A O                                               python-data          0.323222\n",
+       "1        By  A O                                 python-data-visualization          0.249256\n",
+       "2        By  A O                                                    python          0.227561\n",
+       "3        By  A O                             neural-networks-deep-learning          0.137716\n",
+       "4        By  A O                                      python-data-analysis          0.117494\n",
+       "...          ...                                                       ...               ...\n",
+       "3552984   By 배병선                                         child-development          0.000000\n",
+       "3552985   By 배병선                                    remote-team-management          0.000000\n",
+       "3552986   By 배병선  write-a-feature-length-screenplay-for-film-or-television          0.000000\n",
+       "3552987   By 배병선        covid-19-contact-tracing-for-nursing-professionals          0.000000\n",
+       "3552988   By 배병선                            introduction-to-data-analytics          0.000000\n",
+       "\n",
+       "[3552989 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
